; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_resource.c_lookup_resource.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_resource.c_lookup_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i64, %struct.resource*, %struct.resource* }

@resource_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.resource* @lookup_resource(%struct.resource* %0, i64 %1) #0 {
  %3 = alloca %struct.resource*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.resource*, align 8
  store %struct.resource* %0, %struct.resource** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = call i32 @read_lock(i32* @resource_lock)
  %7 = load %struct.resource*, %struct.resource** %3, align 8
  %8 = getelementptr inbounds %struct.resource, %struct.resource* %7, i32 0, i32 2
  %9 = load %struct.resource*, %struct.resource** %8, align 8
  store %struct.resource* %9, %struct.resource** %5, align 8
  br label %10

10:                                               ; preds = %21, %2
  %11 = load %struct.resource*, %struct.resource** %5, align 8
  %12 = icmp ne %struct.resource* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %10
  %14 = load %struct.resource*, %struct.resource** %5, align 8
  %15 = getelementptr inbounds %struct.resource, %struct.resource* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %25

20:                                               ; preds = %13
  br label %21

21:                                               ; preds = %20
  %22 = load %struct.resource*, %struct.resource** %5, align 8
  %23 = getelementptr inbounds %struct.resource, %struct.resource* %22, i32 0, i32 1
  %24 = load %struct.resource*, %struct.resource** %23, align 8
  store %struct.resource* %24, %struct.resource** %5, align 8
  br label %10

25:                                               ; preds = %19, %10
  %26 = call i32 @read_unlock(i32* @resource_lock)
  %27 = load %struct.resource*, %struct.resource** %5, align 8
  ret %struct.resource* %27
}

declare dso_local i32 @read_lock(i32*) #1

declare dso_local i32 @read_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
